--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,33 @@
     transform: rotate(360deg);
   }
 }
+
+@media screen and (max-width: 1024px) {
+
+  .container{
+
+      width: var(--container-width-md);
+  }
+
+  section{
+
+      margin-top: 6rem;
+  }
+  
+}
+
+/* Media queries for small devices(Mobiles) */
+
+@media screen and (max-width: 600px) {
+
+  .container{
+
+      width: var(--container-width-sm);
+  }
+
+  section > h2{
+
+      margin-bottom: 2rem;
+  }
+  
+}
